Mon Feb  8 10:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSByteOrder.h: Implemented a full set of byte-swapping
	inline functions for integers with known sizes.
	* Source/NSData.m: Corrected serialization/deserialization routines to
	do byte-swapping using new functions.
	* Source/UnixFileHandle.m: Use new byte-swapping functions rather than
	htonl(), htons(), ntohl(), ntohs().
	* Source/NSUnarchiver.m: Use new byte-swapping functions.

1999-02-04 Adam Fedor <fedor@gnu.org>

	* config/config.printf.c: New file.
	* configure.in: Test for broken register_printf function.

	* Source/NSLog.m (_NSLog_standard_printf_handler): Use fputs to
	avoid possible double expansion of format chars.

1999-02-04  Matthias Klose  <doko@cs.tu-berlin.de>

	* Source/include/NSObject.h: eval value in ASSIGN macro only once.

Thu Feb  4 13:10:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSString.m: ([-dataUsingEncoding:allowLossyConversion:])
	Removed spurious trailing nul and other spurious code having no
	effect - formatted to be readable.

Thu Feb  4 13:10:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Deleted all the old property-list and strings-file parsing stuff.
	* Source/NSBitmapCharSet.m: ([-formUnionWithCharacterSet]) corrected
	to use bitwise or rather than logical or.
	([-formIntersectionWithCharacterSet:]) corrected to use bitwise and
	rather than logical and.
	* Source/NSString.m: Implemented handwritten parser code for
	([-propertyList]) and ([-propertyListFromStringsFileFormat]) which
	supports unicode strings, is 64-bit clean, and raises exceptions
	as it should when given a badly formatted string to parse.
	This replaces the old lex/bison code (which did none of these things)
	and runs just as fast!  Just hope that if there are any bugs they
	show up in time to fix for the 0.6 release.
	* Tools/GNUmakefile: Added plparse and sfparse.