@@ -196,7 +196,7 @@ _gnu_process_args(int argc, char *argv[], char *env[])
    that it automatically gets called before main with the argument and
    environment pointers. FIXME: Would like to do something similar
    for other formats besides ELF. */
-#if ((defined(__ELF__) && !defined(__FreeBSD__) && !defined(__PPC__)) || defined(SYS_AUTOLOAD))
+#if (!defined(__FreeBSD__)) || defined(SYS_AUTOLOAD)
 #ifdef linux
 
 /* Under linux the functions in __libc_subinit are called before the
